v1.10 -
   - Updated the muscle submodule to v7.54
   - Modified the color of the bell-icon when it rings, so that
     the ringing of the bell is more obvious at a glance
   - Added client/server support and MUSCLE-Message database support

v1.01 - 6/22/2019
   - Added code to test_peer.cpp to test sending and receiving of
     user-level Messages via unicast and multicast.
   - Added multicast-behavior setting to the ZGPeerSettings class
     to allow control of what sort of multicast packets should go over
     Wi-Fi and non-Wifi network interfaces, respectively.
   * Merged in changes from Ruurd Adema to make
     MessageReceivedFromPeer() protected instead of private.
   * Updated the muscle submodule to v7.30, and fixed some compiler 
     warnings.