@@ -3,6 +3,7 @@ v1.10 -
    - Modified the color of the bell-icon when it rings, so that
      the ringing of the bell is more obvious at a glance
    - Added client/server support and MUSCLE-Message database support
+   - Added clocksync/ZGTimeAverager class
 
 v1.01 - 6/22/2019
    - Added code to test_peer.cpp to test sending and receiving of
